# easyblog_django

./: .coverage  .gitignore  Dockerfile  README.md  compose.yaml  manage.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  tox.ini
.github/workflows/: deploy.yml  tests.yml  tox_tests.yml
db_backup/: db_jiri_one_latest.json
easyblog/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
easycron/: apps.py
easycron/management/commands/: run_easycron.py
jiri_one/: admin.py  apps.py  context_processors.py  models.py  test_views.py  tests.py  urls.py  utils.py  views.py
jiri_one/management/commands/: del_old_dbbackup.py  fix_internal_urls.py  fix_unternal_urls.py  redeploy.py  reimport_rethinkdb.py
jiri_one/migrations/: 0001_initial.py  0002_alter_post_options_alter_tag_options_tag_order_and_more.py  0002_alter_post_pub_time.py  0003_alter_comment_post.py  0004_comment_pub_time.py
jiri_one/templates/: base.html  index.html  post.html
jiri_one/templatetags/: custom_template_filters.py
jiri_one/tests/: test_commands.py  test_utils.py
src/easyblog/: asgi.py  settings.py  urls.py
src/easyblog_django.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/jiri_one/: admin.py  apps.py  models.py  schema.py  urls.py  views.py
src/jiri_one/management/commands/: fix_unternal_urls.py  redeploy.py
src/jiri_one/migrations/: 0003_alter_post_content_cze_alter_post_content_eng.py
src/jiri_one/templates/: base.html  index.html
src/jiri_one/tests/: test_graphql.py  test_views.py
src/utils/: new_secret_key.py  rethinkdb_try.py  soup_try.py
templates/admin/: base.html
utils/: files_url_fix.py  from_rethinkdb_to_django.py  soup_test.py
