[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easyblog-django"
version = "1.0.0"
description = "Blog CMS for http://jiri.one site."
authors = [
  {email = "jiri1@duck.com"},
  {name = "Jiří Němec"}
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
readme = "README.md"
dependencies = [
  "psycopg2-binary>=2.9.5",
  "beautifulsoup4>=4.11.1",
  "django>=5.2",
  "django-prose",
  "httpx",
  "daphne",
  "djangorestframework",
  "django-filter",
  "markdown"
]

[project.optional-dependencies]
dev = [
  "django-stubs",
  "pytest",
  "pytest-django",
  "mypy",
  "pyflakes",
]


# PyTest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "easyblog.settings"

# MyPY configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "easyblog.settings"

[[tool.mypy.overrides]]
module = "rethinkdb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

# Tox configuration
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py313, mypy, pyflakes
skipsdist = True

[gh-actions]
python =
    3.13: py313, mypy, pyflakes

[testenv]
passenv = SYSTEM_ENV
deps =
    poetry
commands =
    poetry install --no-root --with tests
    poetry run python -m pytest -v

[testenv:mypy]
basepython = python3.13
deps =
    poetry
commands =
    poetry install --no-root --with mypy
    poetry run python -m mypy easyblog jiri_one

[testenv:pyflakes]
basepython = python3.13
deps =
    poetry
commands =
    poetry install --no-root --with pyflakes
    poetry run python -m pyflakes easyblog jiri_one
"""
