[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easyblog-django"
version = "1.0.0"
description = "Blog CMS for http://jiri.one site."
authors = [
  {email = "jiri1@duck.com"},
  {name = "Jiří Němec"}
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
readme = "README.md"
dependencies = [
  "psycopg2-binary>=2.9.5",
  "beautifulsoup4>=4.11.1",
  "django>=5.2",
  "django-prose",
  "httpx",
  "daphne",
  "graphene-django>=3.2.3",
  "markdown"
]

[project.optional-dependencies]
dev = [
  "django-stubs",
  "pytest",
  "pytest-django",
  "pyright",
  "ruff",
]

# PyTest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.easyblog.settings"

[tool.ruff]
lint.select = ["E", "F"]  # Keep other rules enabled
lint.ignore = ["E731", "E501"]    # Disable the lambda assignment rule and logn lines

# Pyright configuration
[tool.pyright]
pythonVersion = "3.13"  # Match the Python version
include = ["src"]       # Analyze the "src" directory
exclude = [
  "src/easyblog/migrations",  # Exclude migrations
  "src/jiri_one/migrations",
  "src/utils", # Exclude utils
]
reportMissingImports = false  # Equivalent to ignoring missing imports
reportUnusedImport = true     # Warn about unused imports
reportUnusedVariable = true   # Warn about unused variables
reportUnnecessaryTypeIgnoreComment = true  # Warn about unnecessary "type: ignore"
reportGeneralTypeIssues = true  # Enable general type-checking issues

# Tox configuration
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py313, pyright, ruff
skipsdist = True

[gh-actions]
python =
    3.13: py313, pyright, ruff

[testenv]
passenv = SYSTEM_ENV
commands =
    pip install '.[dev]'
    pytest -v

[testenv:pyright]
basepython = python3.13
commands =
    pip install '.[dev]'
    pyright

[testenv:ruff]
basepython = python3.13
commands =
    pip install '.[dev]'
    ruff check src
"""
