[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easyblog-django"
version = "1.0.0"
description = "Blog CMS for http://jiri.one site."
authors = [
  {email = "jiri1@duck.com"},
  {name = "Jiří Němec"}
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
readme = "README.md"
dependencies = [
  "psycopg2-binary>=2.9.5",
  "beautifulsoup4>=4.11.1",
  "django>=5.2",
  "django-prose",
  "httpx",
  "daphne",
  "graphene-django>=3.2.3",
  "markdown"
]

[project.optional-dependencies]
dev = [
  "django-stubs",
  "pytest",
  "pytest-django",
  "pyright",
  "ruff",
]

[tool.tox]
envlist = ["py313", "pyright", "ruff"]
skipsdist = true

[tool.tox.gh-actions]
python = { "3.13" = ["py313", "pyright", "ruff"] }

[tool.tox.testenv]
passenv = ["SYSTEM_ENV"]
commands = [
  "pip install '.[dev]'",
  "pytest -v"
]

[tool.tox.testenv.pyright]
basepython = "python3.13"
commands = [
  "pip install '.[dev]'",
  "pyright"
]

[tool.tox.testenv.ruff]
basepython = "python3.13"
commands = [
  "pip install '.[dev]'",
  "ruff check src"
]
